[metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Amaretto-Coke
author_email = brandonmuise1@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amaretto-Coke/pumas
project_urls =
    Bug Tracker = https://github.com/Amaretto-Coke/pumas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
